# CloudCVBackend

./: .gitignore  .travis.yml  LICENSE  README.md  binding.gyp  cloudcv.js  main.cpp  package.json
.c9revisions/: LICENSE.c9save  README.md.c9save  binding.gyp.c9save  (+2 more)
src/: CMakeLists.txt  analyze.cpp  cloudcv.cpp  cloudcv.hpp  main.cpp  node_helpers.cpp  node_helpers.hpp
src/framework/: Async.hpp  Image.cpp  Image.hpp  ImageSource.cpp  ImageSource.hpp  Job.cpp  Job.hpp  Logger.h  NanCheck.cpp  NanCheck.hpp
src/framework/marshal/: marshal.hpp  node_object_builder.cpp  node_object_builder.hpp  opencv.cpp  opencv.hpp  primitives.cpp  primitives.hpp  stl.cpp  stl.hpp
src/modules/: CMakeLists.txt
src/modules/analyze/: CMakeLists.txt  analyze.cpp  analyze.hpp  binding.cpp  binding.hpp  dominantColors.cpp  dominantColors.hpp  test.cpp
src/modules/buildInformation/: buildInformation.cpp  buildInformation.hpp
src/modules/cameraCalibration/: CameraCalibrationAlgorithm.cpp  CameraCalibrationAlgorithm.hpp  CameraCalibrationBinding.cpp  CameraCalibrationBinding.hpp
src/modules/common/: CMakeLists.txt  Color.hpp  ImageUtils.cpp  ImageUtils.hpp  Numeric.cpp  Numeric.hpp  ScopedTimer.hpp  Serialization.hpp
src/modules/faceRec/: CMakeLists.txt  faceRec.cpp  faceRec.hpp  faceRecBinding.cpp  faceRecBinding.hpp  test.cpp
src/modules/markerDetection/: Marker.cpp  Marker.hpp  MarkerDetectionBinding.cpp  MarkerDetectionBinding.hpp  MarkerDetector.cpp  MarkerDetector.hpp
src/modules/node/: Marshal.cpp  Marshal.hpp
src/node/: node_helpers.cpp  node_helpers.hpp
(+7 files in other folders)
